 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.ui.UpdateActivity" >
 	<com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/updatebook"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/bookNum"
        />
	<EditText 
	    android:id="@+id/bookupdateNum"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/bookNumHint"
	    android:layout_margin="10dp"
	    android:maxLines="1"
	    />
	  <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/bookName"
        />
	<EditText 
	    android:id="@+id/bookupdateName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/bookNameHint"
	    android:singleLine="true"
	    android:layout_margin="10dp"
	    android:maxLines="1"
	    />
	  <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/bookPrice"
        />
	<EditText 
	    android:id="@+id/bookupdatePrice"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/bookPriceHint"
	    android:layout_margin="10dp"
	    android:maxLines="1"
	    />
	<Button
	    android:id="@+id/updateBt"
	    android:layout_width="100dp"
	    android:layout_gravity="center"
	    android:background="@drawable/edit_bg"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:text="@string/update"
	    android:textColor="#fff"
	    />

</LinearLayout>
</ScrollView>