<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ui.MainActivity" >
    <com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
  <Button 
      android:id="@+id/insert"
      android:text="@string/insert"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
      android:textSize="25sp"
      android:layout_height="wrap_content"
      android:layout_width="100dp"
	  android:layout_gravity="center"
	  android:background="@drawable/edit_bg"
	  android:textColor="#fff"
      />
   <Button 
      android:id="@+id/update"
      android:text="@string/update"
      android:layout_margin="10dp"
      android:textSize="25sp"
      android:layout_height="wrap_content"
      android:layout_width="100dp"
	  android:layout_gravity="center"
	  android:background="@drawable/edit_bg"
	  android:textColor="#fff"
      />
  
    <Button 
      android:id="@+id/delete"
      android:text="@string/delete"
      android:layout_margin="10dp"
      android:textSize="25sp"
      android:layout_height="wrap_content"
      android:layout_width="100dp"
	  android:layout_gravity="center"
	  android:background="@drawable/edit_bg"
	  android:textColor="#fff"
      />
   
     <Button 
      android:id="@+id/select"
      android:text="@string/select"
      android:layout_margin="10dp"
      android:textSize="25sp"
      android:layout_height="wrap_content"
      android:layout_width="100dp"
	  android:layout_gravity="center"
	  android:background="@drawable/edit_bg"
	  android:textColor="#fff"
      />
</LinearLayout>
