<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.ui.DeleteActivity" >
 	<com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/deletebyname"
	    android:gravity="center_horizontal"
	    android:textSize="20sp"
	    android:layout_margin="30dp"
	    />
	<EditText
	    android:id="@+id/deletename"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:maxLines="1"
	    android:hint="@string/bookNumHint"
	    android:ems="20"
	    android:textSize="18sp"
	    android:layout_margin="15dp"
	    ></EditText>
	<Button
	    android:id="@+id/deleteNamebt"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:layout_gravity="center"
	    android:layout_margin="5dp"
	    android:text="@string/delete"
	    android:background="@drawable/edit_bg"
	    android:textColor="#fff"
	    />
</LinearLayout>
</ScrollView>