
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ui.SelectActivity" >
 
	 <com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
	   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
       <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:gravity="center"
	    android:layout_margin="10dp"
	    android:text="@string/bookNumber"
	    android:layout_weight="1"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:layout_margin="10dp"
	    android:text="@string/bookna"
	    android:ellipsize="end"   
	    android:gravity="center"
	    android:layout_weight="1"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:gravity="center"
	    android:text="@string/bookPr"
	    android:layout_margin="10dp"
	    android:layout_weight="1"
	    />
  	 </LinearLayout>
    <ListView
        android:id="@+id/booklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </ListView>
</LinearLayout>
